change attribute div  for ul

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="boost_item">
           <div class="icon"><img src="./images/icon-text.svg" alt="text" /></div>
-          <strong>text snippets</strong>
+          <strong>Plain text snippets</strong>
 
           <small>Remove unwanted formatting from copied text for a consistent look.
           </small>
@@ -110,13 +110,13 @@
     </main>
     <footer>
       <img src="./images/logo.svg" alt="logo" class="logo" />
-      <div class="list">
-        <a href="#" class="list-item">FAQs</a>
-        <a href="#" class="list-item">Privacy Policy</a>
-        <a href="#" class="list-item">Install Guide</a>
-        <a href="#" class="list-item">Contact Us</a>
-        <a href="#" class="list-item">Press Kit</a>
-      </div>
+      <ul>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Install Guide</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Press Kit</a></li>
+      </ul>
       <div class="social_brands">
         <a href="https://www.facebook.com/" target="_blank"><svg width="24" height="24"
             xmlns="http://www.w3.org/2000/svg">
